--- a/style.css
+++ b/style.css
@@ -6,8 +6,6 @@
   scroll-behavior: smooth;
 }
 
-body {
-}
 .canvas {
   min-height: 100vh;
   overflow: hidden;
@@ -329,11 +327,19 @@ nav ul a:hover {
   background-position: center;
   overflow: hidden;
   z-index: -1;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .video-main {
   text-align: center;
-  margin-top: 5vh;
   width: 100%;
+}
+
+.video-main video {
+  width: 100vw;
 }
 /* scroll animation left to right */
 .heading-move {
@@ -373,7 +379,6 @@ span.nostroke {
 /* Senior CARS START HERE */
 .senior {
   min-height: 80vh;
-
   overflow: hidden;
 }
 .card {
